--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -49,7 +49,15 @@ services:
     ports:
       - "3000-3010:3000"
     volumes:
-      - ./APIS/memberships:/mem/membershipsAPI
+      - ./APIS/memberships:/ord/memberships_api
+
+  products_api:
+    build:
+      context: ./APIS
+    ports:
+      - "3000-3010:3000"
+    volumes:
+      - ./APIS/products:/mem/productsAPI
     networks:
       - dev_network
 
