--- a/infrastructure/APIS/Dockerfile.products
+++ b/infrastructure/APIS/Dockerfile.products
@@ -1,27 +1,26 @@
 FROM node:20
 
-# Instala herramientas necesarias y limpia los archivos temporales de apt
 RUN apt-get update && apt-get install -y wget nano && rm -rf /var/lib/apt/lists/*
 
-# Limpia la caché de npm
 RUN npm cache clean --force
 
-# Instala una versión específica de npm
 RUN npm install -g npm@8.12.1
 
-# Crea los directorios para cada microservicio
 RUN mkdir -p /pro/productsAPI
 
-# Instala dependencias para productsAPI
 WORKDIR /pro/productsAPI
 COPY products/package*.json ./
 RUN npm install @prisma/client
-RUN npm run install-all
-RUN npm run install-dev
-RUN npm install dotenv -d
+RUN npm install cors
+RUN npm install crypto-js
+RUN npm install cryptojs
+RUN npm install express
+RUN npm install jsonwebtoken
+RUN npm install prisma
+RUN npm install nodemon
+RUN npm install dotenv
 COPY products/ ./
 
-# Genera archivos de Prisma para productsAPI
 RUN npx prisma generate
 
 CMD ["npx", "nodemon", "app.js"]
