--- a/infrastructure/APIS/Dockerfile.users
+++ b/infrastructure/APIS/Dockerfile.users
@@ -1,28 +1,26 @@
 FROM node:20
 
-# Instala herramientas necesarias y limpia los archivos temporales de apt
 RUN apt-get update && apt-get install -y wget nano && rm -rf /var/lib/apt/lists/*
 
-# Limpia la caché de npm
 RUN npm cache clean --force
 
-# Instala una versión específica de npm
 RUN npm install -g npm@8.12.1
 
-# Crea los directorios para cada microservicio
 RUN mkdir -p /usr/usersAPI 
 
-# Instala dependencias para usersAPI
 WORKDIR /usr/usersAPI
 COPY users/package*.json ./
 RUN npm install @prisma/client
-RUN npm run install-all
-RUN npm run install-dev
-RUN npm install dotenv -d
+RUN npm install cors
+RUN npm install crypto-js
+RUN npm install cryptojs
+RUN npm install express
+RUN npm install jsonwebtoken
+RUN npm install prisma
+RUN npm install nodemon
+RUN npm install dotenv
 COPY users/ ./
 
-# Genera archivos de Prisma para usersAPI
 RUN npx prisma generate
-
 
 CMD ["npx", "nodemon", "app.js"]
