--- a/products/package.json
+++ b/products/package.json
@@ -4,20 +4,21 @@
   "description": "product microservice",
   "main": "app.js",
   "scripts": {
-    "install-all": "npm install @prisma/client cors crypto-js cryptojs dotenv express jsonwebtoken prisma",
-    "install-dev": "npm install nodemon -D",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "deivid & santiago",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "cryptojs": "^2.5.3",
-    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.20.0"
+    "prisma": "^5.21.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "nodemon": "^3.1.7"
   }
 }
