--- a/infrastructure/APIS/products/.env
+++ b/infrastructure/APIS/products/.env
@@ -1,2 +1,2 @@
 # URL de conexión para la base de datos de productos
-DATABASE_URL="postgres://postgres:12345@products_db:5432/products_db?schema=public"
+DATABASE_URL_PRODUCTS="postgres://postgres:12345@products_db:5432/products_db?schema=public"
