--- a/memberships/.env
+++ b/memberships/.env
@@ -1,2 +1,2 @@
 # URL de conexión para la base de datos de órdenes
-DATABASE_URL="postgres://postgres:12345@memberships_db:5432/memberships_db?schema=public"
+DATABASE_URL_MEMBERSHIPS="postgres://postgres:12345@memberships_db:5432/memberships_db?schema=public"
