--- a/infrastructure/APIS/Dockerfile.products
+++ b/infrastructure/APIS/Dockerfile.products
@@ -12,6 +12,7 @@ WORKDIR /pro/productsAPI
 COPY products/package*.json ./
 RUN npm install prisma
 RUN npm install @prisma/client
+RUN npm install graphql apollo-server-express
 RUN npm install cors
 RUN npm install crypto-js
 RUN npm install cryptojs
