--- a/infrastructure/nginx/nginx.conf
+++ b/infrastructure/nginx/nginx.conf
@@ -1,4 +1,3 @@
-# Definir upstreams para cada servicio de API
 upstream users_api {
     server users_api:3100;
 }
@@ -15,31 +14,33 @@ upstream products_api {
     server products_api:3400;
 }
 
-# Configurar el servidor Nginx
+upstream payments_api {
+    server payments_api:3500;
+}
+
 server {
     listen 80;
     
-    # Redireccionar según el nombre del servidor
     server_name localhost;
 
-    # Configuración para la API de usuarios
     location /users {
         proxy_pass http://users_api;
     }
 
-    # Configuración para la API de órdenes
     location /orders {
         proxy_pass http://orders_api;
     }
 
-    # Configuración para la API de membresías
     location /memberships {
         proxy_pass http://memberships_api;
     }
 
-    # Configuración para la API de productos
     location /products {
         proxy_pass http://products_api;
+    }
+
+        location payments {
+        proxy_pass http://payments_api;
     }
 
     # Configuración de cabeceras para el proxy
