--- a/infrastructure/APIS/memberships/package.json
+++ b/infrastructure/APIS/memberships/package.json
@@ -9,13 +9,15 @@
   "author": "deivid & santiago",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
+    "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "cryptojs": "^2.5.3",
     "express": "^4.21.1",
+    "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.21.1"
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
