--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -35,8 +35,11 @@ services:
       - "5100:5432"
     volumes:
       - ./users_data:/var/lib/postgres/data
+      - ./users_logs:/var/log/postgresql
+      - ./postgres_configs/postgresql.users.conf:/etc/postgresql/postgresql.conf
     networks:
       - dev_network
+    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
 
   orders_api:
     build:
@@ -72,8 +75,11 @@ services:
       - "5200:5432"
     volumes:
       - ./orders_data:/var/lib/postgres/data
+      - ./orders_logs:/var/log/postgresql
+      - ./postgres_configs/postgresql.orders.conf:/etc/postgresql/postgresql.conf
     networks:
       - dev_network
+    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
 
   memberships_api:
     build:
@@ -109,8 +115,11 @@ services:
       - "5300:5432"
     volumes:
       - ./memberships_data:/var/lib/postgres/data
+      - ./memberships_logs:/var/log/postgresql
+      - ./postgres_configs/postgresql.memberships.conf:/etc/postgresql/postgresql.conf
     networks:
       - dev_network
+    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
 
   products_api:
     build:
@@ -146,8 +155,11 @@ services:
       - "5400:5432"
     volumes:
       - ./products_data:/var/lib/postgres/data
+      - ./products_logs:/var/log/postgresql
+      - ./postgres_configs/postgresql.products.conf:/etc/postgresql/postgresql.conf
     networks:
       - dev_network
+    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
 
   payments_api:
     build:
@@ -163,7 +175,7 @@ services:
           cpus: '0.1'
           memory: 1GB
     ports:
-      - "3500:3400"
+      - "3500:3500"
     volumes:
       - ./APIS/payments:/pay/paymentsAPI
     networks:
@@ -180,11 +192,14 @@ services:
       POSTGRES_PASSWORD: 12345
       POSTGRES_DB: payments_db
     ports:
-      - "500:5432"
+      - "5500:5432"
     volumes:
       - ./payments_data:/var/lib/postgres/data
+      - ./payments_logs:/var/log/postgresql
+      - ./postgres_configs/postgresql.payments.conf:/etc/postgresql/postgresql.conf
     networks:
       - dev_network
+    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
 
   nginx:
     build:
